# reroll-knight-bevy

./: Cargo.toml
assets/configs/: config.generation.ron
assets/models/: cell.gltf  table.gltf
assets/models/private/: license.txt  scene.gltf
src/: app_plugin.rs  assets.rs  bootstrap.rs  common.rs  constants.rs  dependencies.rs  game.rs  gameplay.rs  infrastructure.rs  main.rs  main_menu.rs  ui.rs
src/bootstrap/: systems.rs
src/bootstrap/systems/: load_configs.rs  open_main_menu.rs  spawn_camera.rs
src/common/: components.rs  coordinates.rs  layer.rs  systems.rs
src/common/systems/: despawn_not_in_state.rs
src/common/utils/: extensions.rs
src/game/: bootstrap.rs  main_menu.rs
src/game/bootstrap/: systems.rs
src/game/bootstrap/systems/: open_main_menu.rs  (+2 more)
src/game/main_menu/: systems.rs
src/gameplay/: components.rs  hud.rs  progression.rs  start_new_run.rs  systems.rs  world.rs
src/gameplay/end_run/: systems.rs
src/gameplay/hud/: components.rs  systems.rs
src/gameplay/progression/: per_run.rs
src/gameplay/start_new_run/: systems.rs
src/gameplay/systems/: sit_at_table.rs  sit_at_table_from_progress.rs  write_start_run_event.rs
src/gameplay/world/: config.rs  field.rs  table.rs  view.rs
src/main_menu/: components.rs  systems.rs
src/main_menu/systems/: build_main_menu.rs  buttons_handle.rs  interact_with_quit_button.rs
src/ui/: components.rs  create.rs  factory.rs  order.rs  systems.rs
src/ui/systems/: build_loading_curtain.rs  build_main_menu.rs  click_on_pressed_button.rs  show_hide.rs  visualise_interaction_with_buttons.rs
(+15 files in other folders)
