[package]
name = "reroll-knight"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.2"
bevy-inspector-egui = "0.24.0"
bevy_common_assets = { version = "0.10.0", features = ["ron"] }
serde = { version = "1.0.199", features = ["derive"] }

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
